@@ -11,7 +11,10 @@ Build-Depends:
  x11proto-core-dev,
  x11proto-randr-dev,
  quilt,
- dpkg-dev (>= 1.14.17)
+ dpkg-dev (>= 1.14.17),
+ automake,
+ libtool,
+ xutils-dev
 Standards-Version: 3.7.3
 Vcs-Git: git://git.debian.org/git/pkg-xorg/driver/xserver-xorg-input-vmmouse
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/driver/xserver-xorg-input-vmmouse.git
