@@ -11,13 +11,14 @@
 include debian/xsfbs/xsfbs.mk
 
 CFLAGS = -Wall -g
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
+ifneq (,$(filter noopt,$(DEB_BUILD_OPTIONS)))
 	CFLAGS += -O0
 else
 	CFLAGS += -O2
 endif
-ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-	INSTALL_PROGRAM += -s
+ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+	NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
+	MAKEFLAGS += -j$(NUMJOBS)
 endif
 
 DEB_HOST_ARCH      ?= $(shell dpkg-architecture -qDEB_HOST_ARCH)
@@ -32,8 +33,11 @@ endif
 # kbd_drv.a isn't phenomenally useful; kbd_drv.so more so
 confflags += --disable-static
 
-build: patch build-stamp
-build-stamp:
+configure: $(STAMP_DIR)/patch
+	autoreconf -vfi
+
+build: build-stamp
+build-stamp: configure
 	dh_testdir
 
 	test -d obj-$(DEB_BUILD_GNU_TYPE) || mkdir obj-$(DEB_BUILD_GNU_TYPE)
@@ -42,8 +46,7 @@ build-stamp:
 	             --infodir=\$${prefix}/share/info $(confflags) \
 	             CFLAGS="$(CFLAGS)" DRIVER_MAN_SUFFIX=4x DRIVER_MAN_DIR=\$$\(mandir\)/man4
 	cd obj-$(DEB_BUILD_GNU_TYPE) && $(MAKE)
-
-	touch build-stamp
+	>$@
 
 clean: xsfclean
 	dh_testdir
@@ -55,6 +58,9 @@ clean: xsfclean
 	rm -f conftest* */conftest*
 	rm -rf autom4te.cache */autom4te.cache
 	rm -rf obj-*
+	rm -f aclocal.m4 config.guess config.sub config.h.in configure
+	rm -f depcomp install-sh ltmain.sh missing
+	rm -f $$(find -name Makefile.in)
 
 	dh_clean
 
